<resources>
    <string name="app_name">PRM392</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_email_member">Nhập email thành viên</string>
    <string name="btn_add_member">Thêm thành viên</string>

    <!-- Settings Activity -->
    <string name="title_settings">Settings</string>
    <string name="switch_dark_theme">Dark Theme</string>
    <string name="switch_notification">All Notifications</string>
    <string name="switch_12h">12h</string>
    <string name="switch_24h">24h</string>
    <string name="switch_time">24h / 12h Time Format</string>
    <!-- Projects Activity -->
    <string name="title_projects">Projects</string>
    <string name="title_my_projects">My Projects</string>
    <string name="desc_add_project">Thêm project</string>

    <!-- Navigation Drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_members">Members</string>
    <string name="nav_global">Global Tool</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>

    <string name="Homepage">Trang chủ</string>
    <string name="UserProfile">Hồ sơ cá nhân</string>
    <string name="Settings">Cài đặt</string>
    <string name="LogOut">Đăng xuất</string>


    <string name="cd_back">Back</string>
    <string name="cd_send_message">Send message</string>
    <string name="hint_write_message">Write message here</string>


    <string name="add_member">Thêm thành viên</string>
    <string name="team_menu">Menu team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
