<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ===== MAIN SECTIONS ===== -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_folder"
            android:title="@string/nav_projects" />

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_task"
            android:title="@string/nav_tasks" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_group"
            android:title="@string/nav_members" />

        <item
            android:id="@+id/nav_global"
            android:icon="@drawable/ic_toolbox"
            android:title="@string/nav_global" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>

</menu>
